# sv-bindings

./: Cargo.toml  README.md  build.rs
include/: sv_vpi_user.h  svdpi.h  vpi_user.h  wrapper.h
lib/: lib.rs
