[package]
name = "sv-bindings"
version = "0.1.2"
description = "Raw FFI bindings for the (System)Verilog DPI, PLI, and VPI interfaces (IEEE 1800)."
authors = ["John Zacarias Jekel <john@jekel.ca>"]
readme = "README.md"
#homepage = ""
repository = "https://git.jekel.ca/JZJ/sv-bindings"
license = "MIT"
edition = "2021"
keywords = ["verilog", "systemverilog", "dpi", "vpi", "bindings"]
#categories = ["", "", ""]
#default-run = ""
#documentation = ""

[features]
default = []

[build-dependencies]
bindgen = "0.69.1"

#TODO
#nightly-features = ["nightly-features-benches"]
#nightly-features-benches = []

[lib]
name = "sv_bindings"
path = "lib/lib.rs"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false
overflow-checks = false
panic = "abort"
lto = false
debug = true
